cluster-generator/apps/gateway/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
        update: "1"
    spec:
      containers:
      - name: gateway
        image: asia.gcr.io/sample-project-name/gateway:latest
        command: ["/usr/local/bin/gateway"]
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            port: 80
            path: /healthy
