cluster-generator/apps/gateway/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
